2007-09-03 [ticho]	0.9.10cvs1

	* Makefile.am
	* README
	* cm_perl.pod
	* sc_perl.pod
		Renamed "sc_perl.pod" to "cm_perl.pod".

2007-09-03 [paul]	0.9.10

	0.9.10 released

2007-08-22 [hb]	0.9.9cvs3

	* COPYING
	* sc_perl.pod
	* src/perl_gtk.c
	* src/perl_gtk.h
	* src/perl_plugin.c
	* src/perl_plugin.h
	* tools/matcherrc2perlfilter.pl
		Change license to GPLv3 or later

2007-08-16 [paul]	0.9.9cvs2

	* configure.ac
		use pkgconfig to check for gtk and glib

2007-07-11 [colin]	0.9.9cvs1

	* src/perl_plugin.c
		Specify license better (GPL2+)

2007-07-03 [paul]	0.9.9

	0.9.9 released

2007-06-21 [colin]	0.9.8cvs1

	* src/perl_plugin.c
		Update plugin API

2007-04-16 [paul]	0.9.8

	0.9.8 released

2007-03-21 [wwp]	0.9.7cvs2

	* configure.ac
		Bumped up the minimal Claws-Mail version this
		plugin requires.

2007-03-21 [wwp]	0.9.7cvs1

	* src/perl_plugin.c
		Reflect changes to the log API (2.8.1cvs30).

2007-01-09 [paul]	0.9.7

	0.9.7 released

2006-12-15 [ticho]	0.9.6cvs1

	* configure.ac
	* src/perl_plugin.c
		Use check_plugin_version() for version check.

2006-12-04 [paul]	0.9.6

	0.9.6 released

2006-11-28 [paul]	0.9.5cvs3

	* configure.ac
		bump required version of Claws
		following renaming
		Thanks to Charles Edwards for the
		reminder

2006-11-27 [paul]	0.9.5cvs2

	* sc_perl.pod
	* debian/README.Debian
	* src/perl_gtk.c
	* src/perl_plugin.c
		renaming

2006-11-07 [paul]	0.9.5cvs1

	* ChangeLog
	* INSTALL
	* NEWS
	* configure.ac
	* sc_perl.pod
	* debian/README.Debian
	* debian/changelog
	* debian/control
	* debian/copyright
	* debian/files
	* debian/rules
	* src/Makefile.am
	* src/perl_gtk.c
	* src/perl_gtk.h
	* src/perl_plugin.c
	* src/perl_plugin.h
	* tools/matcherrc2perlfilter.pl
		Name change

2006-09-25 [paul]	0.9.5

	0.9.5 released

2006-09-24 [colin]	0.9.4cvs11

	* src/perl_gtk.c
		Include main.h for sylpheed_is_exiting()

2006-09-23 [colin]	0.9.4cvs10

	* src/perl_gtk.c
		Don't do gtk stuff on exit

2006-09-22 [ticho]	0.9.4cvs9

	* configure.ac