@@ -22,3 +22,4 @@
 ( cvs diff -u -r 1.19.2.42 -r 1.19.2.43 configure.ac;  ) > 0.9.9cvs2.patchset
 ( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 COPYING;  cvs diff -u -r 1.4.2.6 -r 1.4.2.7 sc_perl.pod;  cvs diff -u -r 1.2.2.7 -r 1.2.2.8 src/perl_gtk.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/perl_gtk.h;  cvs diff -u -r 1.19.2.23 -r 1.19.2.24 src/perl_plugin.c;  cvs diff -u -r 1.3.2.3 -r 1.3.2.4 src/perl_plugin.h;  cvs diff -u -r 1.2.2.4 -r 1.2.2.5 tools/matcherrc2perlfilter.pl;  ) > 0.9.9cvs3.patchset
 ( cvs diff -u -r 1.3.2.2 -r 1.3.2.3 Makefile.am;  cvs diff -u -r 1.2.2.2 -r 1.2.2.3 README;  diff -u /dev/null cm_perl.pod;  cvs diff -u -r -1.4.2.7 -r -1.4.2.8 sc_perl.pod;  ) > 0.9.10cvs1.patchset
+( cvs diff -u -r 1.19.2.24 -r 1.19.2.25 src/perl_plugin.c;  ) > 0.9.10cvs2.patchset
