@@ -1,3 +1,10 @@
+2007-10-03 [holger]	0.9.10cvs2
+
+	* src/perl_plugin.c
+		Get rid of double definition of _() symbol
+		by undefining the Perl version (which is not used,
+		and doesn't do anything anyways).
+
 2007-09-03 [ticho]	0.9.10cvs1
 
 	* Makefile.am
